FEAT: added links to social media,added more seeds  and styled the cards

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -3,6 +3,27 @@
 }
 
 .mapboxgl-popup-content {
-  text-align: center;
+  text-align: left;
   font-family: 'Open Sans', sans-serif;
+}
+
+.map-image{
+  height: 200px;
+  width: 100%;
+  border-radius: 2px;
+  object-fit: center;
+  object-position: center;
+}
+.map-image.cover{
+  background-size: cover;
+}
+
+.popup-info{
+  p{
+    margin-bottom: 0px;
+  }
+}
+
+.mapboxgl-popup-content{
+  background: #38a0ba;
 }
