--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,6 +1,8 @@
-.avatar {
-  width: 40px;
+.avatar-user {
+  display: flex;
+  width: 10%;
   border-radius: 50%;
+  margin: 12px auto;
 }
 .avatar-large {
   width: 56px;
