--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,8 +1,8 @@
 .avatar-user {
   display: flex;
-  width: 10%;
+  width: 20vh;
   border-radius: 50%;
-  margin: 12px auto;
+  margin: 28px auto;
 }
 .avatar-large {
   width: 56px;
