--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,22 +1,30 @@
 // Specific CSS for your home-page
 .activity-container{
-  margin: 0px 10%;
+  background-color:  #081317;
+  height: 100vh;
 }
 
-body{
-  background: #081317;
-}
 .title{
   font-size: 52px;
-  margin-bottom: 26px;
 }
 
 .social-media-icon{
   display: flex;
   justify-content: center;
-  color: rgb(2, 221, 229);
+  color: rgb(1, 199, 199);
   font-size: 2em;
   i{
     margin-right: 12px;
   }
+}
+
+.category{
+  margin-top: 24px;
+  margin-bottom: 12px;
+  color: rgb(1, 199, 199);
+  border-bottom: 1px solid rgb(1, 199, 199);
+}
+
+.title-info{
+  height: 50vh;
 }
