--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,5 +1,5 @@
 .btn-search{
-  background-color: rgb(1, 199, 199);
+  background-color: rgb(1, 205, 205);
   border-radius: 50px;
   padding: 2px 18px;
   color: white;
@@ -7,23 +7,34 @@
   margin-right: 12px;
   margin-top: 12px;
   &:hover{
-    background-color: rgba(1, 199, 199, 0.8);
+    background-color: rgba(1, 205, 205, 0.3);
   }
 }
 
 .btn-display{
-  margin-bottom: 12px;
+  background-color: #081317;
+  padding-bottom: 12px;
   display: flex;
   justify-content: center;
 }
 
 .social-media-icon a{
   text-decoration: none;
-  color: rgb(1, 199, 199);
-  margin-top: 8px;
+  color: rgb(1, 205, 205);
+  // margin-top: 0%;
 
   &:hover{
     text-decoration: none;
-    color: inherit;
+    color: rgb(1, 205, 205);
+  }
+}
+
+.social-media-icon{
+  // margin-top: 30%;
+  display: flex;
+  justify-content: center;
+  font-size: 1.5em;
+  i{
+    margin: 0px 4px;
   }
 }
