--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,30 +1,54 @@
 // Specific CSS for your home-page
-.activity-container{
-  background-color:  #081317;
-  height: 100vh;
+h1{
+  font-family: 'Raleway', sans-serif;
+  font-size: 36px;
+}
+p {
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+}
+.intro{
+  // background-image: radial-gradient(circle, rgba(250, 250, 250, 0.001), #40434E);
+  position: relative;
+  display: grid;
+  place-items: center;
+  height: 40vh;
+  background-color: #40434E;
+  clip-path: polygon( 0 0, 100% 0, 100% 100%, 0 calc(100% - 1.5vw));
+  margin-bottom: -1.5vw;
+  z-index: 10;
+  padding: 1%;
 }
 
-.title{
-  font-size: 52px;
-}
-
-.social-media-icon{
+.section-title{
   display: flex;
   justify-content: center;
-  color: rgb(1, 199, 199);
-  font-size: 2em;
-  i{
-    margin-right: 12px;
+  align-items: center;
+  font-size: 60px;
+}
+
+
+
+
+
+// #B3C9D1
+
+.title{
+  color: rgba(250, 250, 250, 0.7);
+  text-align: center;
+  h1{
+    margin-top: 12px;
+    margin-bottom: 2px;
+  }
+  p{
+    margin-bottom: 0px;
   }
 }
 
 .category{
-  margin-top: 24px;
+  position: relative;
+  // margin-top: 24px;
   margin-bottom: 12px;
   color: rgb(1, 199, 199);
   border-bottom: 1px solid rgb(1, 199, 199);
-}
-
-.title-info{
-  height: 50vh;
 }
