--- a/app/views/activities/_map.html.erb
+++ b/app/views/activities/_map.html.erb
@@ -1,8 +1,10 @@
 <div
   id="map"
   style="width: 100%;
-  height: 50vh;"
+  height: 60vh;"
   data-markers="<%= markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 >
+<%= render 'activities/search_btn' %>
+
 </div>
