--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,14 +1,34 @@
-<div class="activity-container">
-  <%= render 'activities/map', markers: @markers %>
-  <%= render 'activities/search_btn' %>
-    <div class="title-info">
-      <%= image_tag('isac.jpeg', class:'avatar-user') %>
-      <h1 class="text-center text-white title">Isac Giuk (Ji Uk) Kim</h1>
-      <%= render 'activities/social_media_links' %>
-    </div>
+<%#= render 'activities/map', markers: @markers %>
+<div class="intro">
+  <div class="title">
+    <%= image_tag('isac.jpeg', class:'avatar-user') %>
+    <h1 class="text-center">Isac Giuk (Ji Uk) Kim</h1>
+    <p>Web Developer</p>
+    <%= render 'activities/social_media_links' %>
+  </div>
 </div>
-<div class="container">
-  <h2 class='category'>Projects</h2>
+<div class="about">
+  <div class="about-container">
+    <h1 class="section-title">About</h1>
+    <div class="about-info">
+      <p>Hello, I am Isac Giuk Kim. </p>
+      <p>I majored in Business Adiministration at Hanyang University in Seoul, South Korea.</p>
+      <p>However, after three and a half years I decided to transfer to Ohio University in Athens, Ohio. </p>
+      <p>In Ohio University, I majored in Media Marketing and graduated with a GPA of 3.6/4.00</p>
+      <p>After graduation, I worked in retail in Guayaquil, Ecuador for a couple months.</p>
+      <p>Before going to Beijing, China to work as an English Teacher for two years, I did an internship in Digital Marketing for a start-up for the duration of 2 months.</p>
+    </div>
+  </div>
+</div>
+<div class="skills">
+  <div class="skill-container">
+    <div class="skill-cards">
+      <%= render 'activities/skills' %>
+    </div>
+    <h1 class="section-title">Skills</h1>
+  </div>
+</div>
+<div class="portfolio">
+  <h1 class="section-title text-white">Projects</h1>
   <%= render 'activities/projects' %>
-
 </div>
