--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -28,9 +28,9 @@
   background: #38a0ba;
 }
 
-#map{
-  // transform: skew(0, 10deg);
-  position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% calc(100% - 5vw));
-  margin-bottom: -5vw;
-}
+// #map{
+//   // transform: skew(0, 10deg);
+//   position: relative;
+//   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% calc(100% - 5vw));
+//   margin-bottom: -5vw;
+// }
