--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,19 +1,22 @@
 .btn-search{
   background-color: rgb(1, 205, 205);
   border-radius: 50px;
-  padding: 2px 18px;
-  color: white;
+  padding: 2px 8px;
+  color: #40434E;
   border: none;
   margin-right: 12px;
   margin-top: 12px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 14px;
   &:hover{
-    background-color: rgba(1, 205, 205, 0.3);
+    color: #40434E;
   }
 }
 
 .btn-display{
-  background-color: #081317;
-  padding-bottom: 12px;
+  // background-color: #081317;
+  // padding-bottom: 12px;
+  // font-family: 'Montserrat', sans-serif;
   display: flex;
   justify-content: center;
 }
