--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -1,6 +1,6 @@
 .about{
   position: relative;
-  height: 60vh;
+  height: 400px;
   background-color: #FE6D64 ;
   z-index: 9;
   clip-path: polygon( 0 0, 100% 0, 100% calc(100% - 1.5vw), 0 100%);
@@ -8,6 +8,8 @@
   display:grid;
   place-items: center;
   color: white;
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
 }
 
 .about-container{
@@ -20,7 +22,6 @@
   width: 500px;
   display: flex;
   flex-direction: column;
-  // align-items: center;
   justify-content: center;
   p{
     font-size: 12px;
