--- a/app/views/activities/_projects.html.erb
+++ b/app/views/activities/_projects.html.erb
@@ -1,4 +1,4 @@
-<div id="projects">
+<div id="projects" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
   <div class="slider">
     <div class="project-card">
       <div>
