FEAT: added to top icon

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,3 +1,4 @@
+<i class="fas fa-arrow-up d-flex flex-column justify-content-center align-items-center">To top</i>
 <div class="map">
   <%= render 'activities/map', markers: @markers %>
 </div>
