--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,13 @@ p {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
 }
+.fa-arrow-up{
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+  z-index:20;
+  color: #049899;
+}
 .intro{
   // background-image: radial-gradient(circle, rgba(250, 250, 250, 0.001), #40434E);
   position: relative;
