FEAT: added description to each section

--- a/app/views/activities/_projects.html.erb
+++ b/app/views/activities/_projects.html.erb
@@ -6,6 +6,7 @@
         <%= link_to "https://mrcocktail-iskim91.herokuapp.com/", "http://mrcocktail-iskim91.herokuapp.com/", target:"_blank" %>
       </div>
       <%= image_tag "Mr-cocktail.png", class:'project-image' %>
+      <p>Cocktail Master is a project where users can share their personal cocktail recipes and view other user's recipes.</p>
     </div>
     <div class="project-card">
       <div>
@@ -13,6 +14,7 @@
         <%= link_to "https://www.uproot.live", "https://www.uproot.live", target:"_blank" %>
       </div>
       <%= image_tag "Uproot.png", class:'project-image' %>
+      <p>Uproot is a site that will ask you a series of questions to match you up with the top 3 cities that comply with your needs.</p>
     </div>
     <div class="project-card">
       <div>
@@ -20,6 +22,7 @@
         <%= link_to "https://airpet-u2v22.herokuapp.com", "airpet-u2v22.herokuapp.com", target:'_blank'  %>
       </div>
       <%= image_tag "airpet2.png", class:'project-image' %>
+      <p>Airpet which purpose was to allow users to have a pet for a desired amount of time from a shelter, to help the shelter monetarily and make the pets more social.</p>
     </div>
   </div>
 </div>
