--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -20,47 +20,41 @@
   width: 600px;
   display: flex;
   align-items: center;
-  // height: 500px;
   padding: 12px;
   img{
     height: 300px;
     width: 100%;
     object-fit: contain;
   }
-    a{
+  a{
     color: black;
     text-decoration: none;
+    font-size: 16px;
     &:hover{
       color: inherit;
     }
   }
+  p{
+    margin-bottom: 0px;
+    font-size: 12px;
+  }
 }
 
 .skill-cards{
-  // background-image: linear-gradient(to right, rgba(39, 40, 35, 0.3), white);
-  // box-shadow: -3px 6px 23px rgba(0, 0, 0, 0.4);
-  // background-color: white;
-  // border: 8px solid rgb(39, 40, 35);
   position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   position: relative;
   grid-gap: 12px;
   width: 500px;
-  color: black;
+  color: rgba(0, 0, 0, 0.6);
   margin-right: 80px;
   padding: 12px;
   p{
     font-size: 12px;
   }
 }
-// .skill-cards::after{
-//   position: absolute;
-//   content:'';
-//   width: 50%;
-//   height: 100%;
-//   background-color: rgba(39, 40, 35, 0.05);
-// }
+
 .skill-card{
   height: 80px;
   width: 100%;
@@ -70,5 +64,4 @@
     width: 100%;
     object-fit: contain;
   }
-
 }
