--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,13 +7,7 @@ p {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
 }
-.fa-arrow-up{
-  position: fixed;
-  bottom: 24px;
-  right: 24px;
-  z-index:20;
-  color: #049899;
-}
+
 .intro{
   // background-image: radial-gradient(circle, rgba(250, 250, 250, 0.001), #40434E);
   position: relative;
@@ -27,12 +21,29 @@ p {
   padding: 1%;
 }
 
-.section-title{
-  font-family: 'Montserrat', sans-serif;
+// .section-title{
+//   text-align: center;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+.section{
+  width: 300px;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  font-family: 'Montserrat', sans-serif;
   font-size: 60px;
+  h1{
+    font-size: inherit;
+    font-family: inherit;
+  }
+  p{
+    font-family: 'Raleway', sans-serif;
+    font-size: 12px;
+  }
 }
 
 
@@ -54,6 +65,7 @@ p {
 .title{
   color: rgba(250, 250, 250, 0.7);
   text-align: center;
+
   h1{
     margin-top: 12px;
     margin-bottom: 2px;
