--- a/app/assets/stylesheets/pages/_skills.scss
+++ b/app/assets/stylesheets/pages/_skills.scss
@@ -7,8 +7,8 @@
   margin-bottom: -1.5vw;
   display:grid;
   place-items: center;
-  color: rgb(125, 125, 160);
-
+  color: rgba(0, 0, 0, 0.6);
+// #C3C4C7
 }
 
 .skill-container{
