FIX: some typos

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -15,7 +15,7 @@
   <div class="about-container" data-aos-anchor-placement="top-bottom">
     <div class="section" data-aos="fade-right">
       <h1 class="section-title" >About</h1>
-      <p class="section-description">A bit of information about myself in regards to my previous education and experiences around the world.</p>
+      <p class="section-description">A bit of information about myself in regards to my education background and previous experiences around the world.</p>
    </div>
     <div class="about-info" data-aos="fade-left" >
       <p>Hello, I am Isac Giuk Kim. </p>
@@ -41,7 +41,7 @@
 <div class="portfolio">
   <div class="section text-white">
     <h1 class="section-title" data-aos="fade-right" data-aos-anchor-placement="center-bottom">Projects</h1>
-    <p class="section-description" data-aos="fade-right" data-aos-anchor-placement="center-bottom">These projects where created by using Ruby on Rails as their main platform. These projects where developed during our last weeks in Le Wagon.</p>
+    <p class="section-description" data-aos="fade-right" data-aos-anchor-placement="center-bottom">These projects were created by using Ruby on Rails as their main platform. These projects where developed during our last weeks in Le Wagon.</p>
   </div>
   <%= render 'activities/projects' %>
 </div>
