FIX: added CL_image_tag to skills and portfolio

--- a/app/views/activities/_skills.html.erb
+++ b/app/views/activities/_skills.html.erb
@@ -1,46 +1,46 @@
 
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= image_tag("CSS.svg") %>
+  <%= cl_image_tag("CSS.svg") %>
   <p>CSS</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= image_tag ("html5.png") %>
+  <%= cl_image_tag ("html5.png") %>
   <p>HTML 5</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= image_tag ("javascript.svg") %>
+  <%= cl_image_tag ("javascript.svg") %>
   <p>JavaScript</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= image_tag ("ruby.png") %>
+  <%= cl_image_tag ("ruby.png") %>
   <p>Ruby</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= image_tag ("rails.png") %>
+  <%= cl_image_tag ("rails.png") %>
   <p>Rails</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= image_tag ("postgresql.svg") %>
+  <%= cl_image_tag ("postgresql.svg") %>
   <p>PostGreSQL</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= image_tag ("stripe.png") %>
+  <%= cl_image_tag ("stripe.png") %>
   <p>Stripe</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= image_tag ("Figma.svg") %>
+  <%= cl_image_tag ("Figma.svg") %>
   <p>Figma</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= image_tag ("git.png") %>
+  <%= cl_image_tag ("git.png") %>
   <p>Git</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= image_tag ("github.png") %>
+  <%= cl_image_tag ("github.png") %>
   <p>GitHub</p>
 </div>
  <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= image_tag ("heroku.png") %>
+  <%= cl_image_tag ("heroku.png") %>
   <p>Heroku</p>
 </div>
 
