FEAT: added url_path to each image

--- a/app/views/activities/_skills.html.erb
+++ b/app/views/activities/_skills.html.erb
@@ -1,46 +1,46 @@
 
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("CSS.svg") %>
+  <%= cl_image_tag("CSS.svg"), url_path %>
   <p>CSS</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag ("html5.png") %>
+  <%= cl_image_tag("html5.png"), url_path %>
   <p>HTML 5</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag ("javascript.svg") %>
+  <%= cl_image_tag("javascript.svg"), url_path %>
   <p>JavaScript</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag ("ruby.png") %>
+  <%= cl_image_tag("ruby.png"), url_path %>
   <p>Ruby</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag ("rails.png") %>
+  <%= cl_image_tag("rails.png"), url_path %>
   <p>Rails</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag ("postgresql.svg") %>
+  <%= cl_image_tag("postgresql.svg"), url_path %>
   <p>PostGreSQL</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag ("stripe.png") %>
+  <%= cl_image_tag("stripe.png"), url_path %>
   <p>Stripe</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag ("Figma.svg") %>
+  <%= cl_image_tag("Figma.svg"), url_path %>
   <p>Figma</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag ("git.png") %>
+  <%= cl_image_tag("git.png"), url_path %>
   <p>Git</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag ("github.png") %>
+  <%= cl_image_tag("github.png"), url_path %>
   <p>GitHub</p>
 </div>
  <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag ("heroku.png") %>
+  <%= cl_image_tag("heroku.png"), url_path %>
   <p>Heroku</p>
 </div>
 
