FIX: removed the url and removed the png and svg from images

--- a/app/views/activities/_skills.html.erb
+++ b/app/views/activities/_skills.html.erb
@@ -1,46 +1,46 @@
 
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("CSS.svg"), url_path %>
+  <%= cl_image_tag("CSS"), url_path %>
   <p>CSS</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("html5.png"), url_path %>
+  <%= cl_image_tag("html5") %>
   <p>HTML 5</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("javascript.svg"), url_path %>
+  <%= cl_image_tag("javascript") %>
   <p>JavaScript</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("ruby.png"), url_path %>
+  <%= cl_image_tag("ruby") %>
   <p>Ruby</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("rails.png"), url_path %>
+  <%= cl_image_tag("rails") %>
   <p>Rails</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("postgresql.svg"), url_path %>
+  <%= cl_image_tag("postgresql") %>
   <p>PostGreSQL</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("stripe.png"), url_path %>
+  <%= cl_image_tag("stripe") %>
   <p>Stripe</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("Figma.svg"), url_path %>
+  <%= cl_image_tag("Figma") %>
   <p>Figma</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("git.png"), url_path %>
+  <%= cl_image_tag("git") %>
   <p>Git</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("github.png"), url_path %>
+  <%= cl_image_tag("github") %>
   <p>GitHub</p>
 </div>
  <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("heroku.png"), url_path %>
+  <%= cl_image_tag("heroku") %>
   <p>Heroku</p>
 </div>
 
