FIX: removed the url and removed the png and svg from images

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -4,7 +4,7 @@
 </div>
 <div class="intro" >
   <div class="title">
-    <%= cl_image_tag('isac.jpeg', class:'avatar-user'), url_path %>
+    <%= cl_image_tag('isac', class:'avatar-user') %>
     <h1 class="text-center">Isac Giuk (Ji Uk) Kim</h1>
     <p>Web Developer</p>
     <%= render 'activities/social_media_links' %>
