--- a/app/views/activities/_skills.html.erb
+++ b/app/views/activities/_skills.html.erb
@@ -1,6 +1,6 @@
 
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-  <%= cl_image_tag("CSS"), url_path %>
+  <%= cl_image_tag("CSS")%>
   <p>CSS</p>
 </div>
 <div class="skill-card" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
