--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -25,18 +25,22 @@
     height: 200px;
     width: 100%;
     object-fit: contain;
+    margin: 8px 0px;
   }
   a{
-    color: black;
+    color: rgba(0, 0, 0, 0.6);
     text-decoration: none;
-    font-size: 16px;
+    font-size: 12px;
     &:hover{
-      color: inherit;
+      color: rgba(0, 0, 0, 0.6);;
+      text-decoration: none;
     }
   }
   p{
     margin-bottom: 0px;
     font-size: 12px;
+    color: rgba(0, 0, 0, 0.6);
+
   }
 }
 
