--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,12 @@ p {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
 }
+h3{
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  margin-bottom: 0px;
+  color: rgba(0, 0, 0, 0.7)
+}
 
 .intro{
   // background-image: radial-gradient(circle, rgba(250, 250, 250, 0.001), #40434E);
@@ -21,12 +27,6 @@ p {
   padding: 1%;
 }
 
-// .section-title{
-//   text-align: center;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
 .section{
   width: 300px;
   text-align: center;
