--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -28,9 +28,14 @@
   background: #38a0ba;
 }
 
-// #map{
-//   // transform: skew(0, 10deg);
-//   position: relative;
-//   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% calc(100% - 5vw));
-//   margin-bottom: -5vw;
-// }
+.map{
+  position: relative;
+  height: 60vh;
+  background-color: rgb(1, 180, 180);
+  clip-path: polygon( 0 0, 100% 0, 100% calc(100% - 1.5vw), 0 100%);
+  margin-bottom: -1.5vw;
+  z-index: 11;
+  p{
+    font-size: 12px;
+  }
+}
