--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -1,6 +1,6 @@
 .about{
   position: relative;
-  height: 400px;
+  padding: 40px;
   background-color: #FE6D64 ;
   z-index: 9;
   clip-path: polygon( 0 0, 100% 0, 100% calc(100% - 1.5vw), 0 100%);
@@ -13,19 +13,90 @@
 }
 
 .about-container{
-  display: flex;
+  display: grid;
+  grid-gap: 12px;
 }
 
-.about-info{
-  margin-left: 80px;
-  height: 400px;
-  width: 500px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  p{
-    font-size: 12px;
-    margin-bottom: 8px;
+@media (min-width: 100px) and (max-width: 575px) {
+  .about-container{
+    grid-template-columns: 1fr;
+    place-items: center;
+  }
+  .about-info{
+    margin-left: 0px;
+    width: 70vw;
+    text-align: center;
   }
 }
 
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .about-container{
+    place-items: center;
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .about-info{
+    margin-left: 0px;
+    width: 70vw;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .about-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+  .about-info{
+    height: 100%;
+    width: 40vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    p{
+      font-size: 12px;
+      margin-bottom: 8px;
+    }
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .about-container{
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .about-info{
+
+    height: 100%;
+    width: 30vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    p{
+      font-size: 12px;
+      margin-bottom: 8px;
+    }
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .about-container{
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .about-info{
+    height: 100%;
+    width: 30vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    p{
+      font-size: 12px;
+      margin-bottom: 8px;
+    }
+  }
+}
