--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,16 +15,14 @@ h3{
 }
 
 .intro{
-  // background-image: radial-gradient(circle, rgba(250, 250, 250, 0.001), #40434E);
   position: relative;
   display: grid;
   place-items: center;
-  height: 42vh;
+  padding: 40px;
   background-color: #40434E;
   clip-path: polygon( 0 0, 100% 0, 100% 100%, 0 calc(100% - 1.5vw));
   margin-bottom: -1.5vw;
   z-index: 10;
-  padding: 1%;
 }
 
 .section{
@@ -45,22 +43,6 @@ h3{
     font-size: 12px;
   }
 }
-
-
-.map{
-  position: relative;
-  height: 60vh;
-  background-color: rgb(1, 180, 180);
-  clip-path: polygon( 0 0, 100% 0, 100% calc(100% - 1.5vw), 0 100%);
-  margin-bottom: -1.5vw;
-  z-index: 11;
-  p{
-    font-size: 12px;
-  }
-}
-
-
-// #B3C9D1
 
 .title{
   color: rgba(250, 250, 250, 0.7);
