FEAT: fixed some responsive issues and the text size

--- a/app/views/activities/_projects.html.erb
+++ b/app/views/activities/_projects.html.erb
@@ -6,7 +6,7 @@
         <%= link_to "https://mrcocktail-iskim91.herokuapp.com/", "http://mrcocktail-iskim91.herokuapp.com/", target:"_blank" %>
       </div>
       <%= cl_image_tag( "Mr-cocktail", class:'project-image') %>
-      <p>Cocktail Master is a project where users can share their personal cocktail recipes and view other user's recipes.</p>
+      <p>Cocktail Master is a project that allows users to sign-up and share their personal cocktail recipes and view other user's recipes. Users are also able to leave reviews to provide feedback.</p>
     </div>
     <div class="project-card">
       <div>
