--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -11,10 +11,11 @@
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
 }
-
+.about-info{
+  font-size: 16px;
+}
 .about-container{
   display: grid;
-  grid-gap: 12px;
 }
 
 @media (min-width: 100px) and (max-width: 575px) {
