--- a/app/assets/stylesheets/pages/_projects.scss
+++ b/app/assets/stylesheets/pages/_projects.scss
@@ -6,18 +6,23 @@
   margin-bottom: -1.5vw;
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
+  display: grid;
+  place-items: center;
 }
 .portfolio-container{
   place-items: center;
   display: grid;
-  grid-gap: 12px;
 }
-
+#projects{
+  height:100%;
+  background-color: white;
+}
 
 .slider{
   position: relative;
   box-shadow: -3px 6px 23px rgba(0, 0, 0, 0.4);
   border-radius: 2px;
+  height:100%;
 }
 
 @media (min-width: 100px) and (max-width: 575px) {
@@ -67,6 +72,6 @@
     grid-template-columns: repeat(2, 1fr);
   }
   #projects{
-    width: 40vw;
+    width: 35vw;
   }
 }
