--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -12,7 +12,9 @@
   font-size: 18px;
 }
 .about-info{
-  font-size: 16px;
+  p{
+    font-size: 16px;
+  }
 }
 .about-container{
   display: grid;
@@ -51,13 +53,9 @@
 }
 
   .about-info{
-    height: 100%;
     width: 40vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+
     p{
-      font-size: 12px;
       margin-bottom: 8px;
     }
   }
@@ -70,14 +68,9 @@
   }
 
   .about-info{
+    width: 32vw;
 
-    height: 100%;
-    width: 30vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     p{
-      font-size: 12px;
       margin-bottom: 8px;
     }
   }
@@ -90,13 +83,8 @@
   }
 
   .about-info{
-    height: 100%;
-    width: 30vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    width: 35vw;
     p{
-      font-size: 12px;
       margin-bottom: 8px;
     }
   }
