FEAT: added some responsive styling and made the about info into a paragraph

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -18,12 +18,12 @@
       <p class="section-description">A bit of information about myself in regards to my education background and previous experiences around the world.</p>
    </div>
     <div class="about-info" data-aos="fade-left" >
-      <p>Hello, I am Isac Giuk Kim. </p>
-      <p>I majored in Business Adiministration at Hanyang University in Seoul, South Korea.</p>
-      <p>However, after three and a half years I decided to transfer to Ohio University in Athens, Ohio. </p>
-      <p>In Ohio University, I majored in Media Marketing and graduated with a GPA of 3.6/4.00</p>
-      <p>After graduation, I worked in retail in Guayaquil, Ecuador for a couple months.</p>
-      <p>Before going to Beijing, China to work as an English Teacher for two years, I did an internship in Digital Marketing for a start-up for the duration of 2 months.</p>
+      <p>Hello, I am Isac Giuk Kim. <br>
+      I majored in Business Adiministration at Hanyang University in Seoul, South Korea.
+      After three and a half years I transferred to Ohio University in Athens, Ohio.<br>
+      In Ohio University, I majored in Media Marketing and graduated with a GPA of 3.6/4.00
+      After graduation, I worked in retail in Guayaquil, Ecuador for a few months.
+      Then before going to Beijing, China to work as an English Teacher, I did an internship in Digital Marketing for a start-up for the duration of 2 months.</p>
     </div>
   </div>
 </div>
