FEAT tested algolia

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -9,6 +9,7 @@
     <p>Web Developer</p>
     <%= render 'activities/social_media_links' %>
     <%= render 'activities/search_btn' %>
+    <input type="text" class="address-input" placeholder="Input your location">
   </div>
 </div>
 <div class="about">
