--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -9,7 +9,6 @@
     <p>Web Developer</p>
     <%= render 'activities/social_media_links' %>
     <%= render 'activities/search_btn' %>
-    <input type="text" class="address-input" placeholder="Input your location">
   </div>
 </div>
 <div class="about">
@@ -47,4 +46,7 @@
     </div>
     <%= render 'activities/projects' %>
   </div>
+</div>
+<div class="footer text-center">
+  <%= render 'activities/social_media_links' %>
 </div>
