--- a/app/views/activities/_projects.html.erb
+++ b/app/views/activities/_projects.html.erb
@@ -24,5 +24,13 @@
       <%= cl_image_tag( "airpet2", class:'project-image') %>
       <p>Airpet which purpose was to allow users to have a pet for a desired amount of time from a shelter, to help the shelter monetarily and make the pets more social.</p>
     </div>
+    <div class="project-card">
+      <div>
+        <h3>Sammies</h3>
+        <%= link_to "https://sammies.herokuapp.com", "sammies.herokuapp.com", target:'_blank'  %>
+      </div>
+      <%= cl_image_tag( "sammies.png", class:'project-image') %>
+      <p>Sammies is a clothing shop that containd clothing for men and women. It is easy to navigate and see the available colors of each item of clothe.</p>
+    </div>
   </div>
 </div>
