FIX: the links in the project cards

--- a/app/views/activities/_projects.html.erb
+++ b/app/views/activities/_projects.html.erb
@@ -11,7 +11,7 @@
     <div class="project-card">
       <div>
         <h3>Uproot</h3>
-        <%= link_to "https://www.uproot.live", "https://www.uproot.live", target:"_blank" %>
+        <%= link_to "http://www.uproot.live", "http://www.uproot.live", target:"_blank" %>
       </div>
       <%= cl_image_tag( "Uproot", class:'project-image') %>
       <p>Uproot is a site that will ask you a series of questions to match you up with the top 3 cities that comply with your needs.</p>
@@ -19,7 +19,7 @@
     <div class="project-card">
       <div>
         <h3>Airpet</h3>
-        <%= link_to "https://airpet-u2v22.herokuapp.com", "airpet-u2v22.herokuapp.com", target:'_blank'  %>
+        <%= link_to "https://airpet-u2v22.herokuapp.com", "https://airpet-u2v22.herokuapp.com", target:'_blank'  %>
       </div>
       <%= cl_image_tag( "airpet2", class:'project-image') %>
       <p>Airpet which purpose was to allow users to have a pet for a desired amount of time from a shelter, to help the shelter monetarily and make the pets more social.</p>
@@ -27,7 +27,7 @@
     <div class="project-card">
       <div>
         <h3>Sammies</h3>
-        <%= link_to "https://sammies.herokuapp.com", "sammies.herokuapp.com", target:'_blank'  %>
+        <%= link_to "https://sammies.herokuapp.com", "https://sammies.herokuapp.com", target:'_blank'  %>
       </div>
       <%= cl_image_tag( "sammies.png", class:'project-image') %>
       <p>Sammies is a clothing shop that containd clothing for men and women. It is easy to navigate and see the available colors of each item of clothe.</p>
