--- a/app/views/activities/_projects.html.erb
+++ b/app/views/activities/_projects.html.erb
@@ -30,7 +30,7 @@
         <%= link_to "https://sammies.herokuapp.com", "https://sammies.herokuapp.com", target:'_blank'  %>
       </div>
       <%= cl_image_tag( "sammies.png", class:'project-image') %>
-      <p>Sammies is a clothing shop that containd clothing for men and women. It is easy to navigate and see the available colors of each item of clothe.</p>
+      <p>Sammies is a clothing shop that provides clothing for men and women. It is easy to navigate and see the available colors of each item of clothe.</p>
     </div>
   </div>
 </div>
