--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -19,7 +19,7 @@
    </div>
     <div class="about-info" data-aos="fade-left" >
       <p>Hello, I am Isac Giuk Kim. <br>
-      I majored in Business Adiministration at Hanyang University in Seoul, South Korea.
+      I majored in Business Administration at Hanyang University in Seoul, South Korea.
       After three and a half years I transferred to Ohio University in Athens, Ohio.<br>
       In Ohio University, I majored in Media Marketing and graduated with a GPA of 3.6/4.00
       After graduation, I worked in retail in Guayaquil, Ecuador for a few months.
